# Insign

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build-wasm.sh  build_milestones.md  demo_boolean_ops.sh  deny.toml  test-wasm-builds.js  test_m8_complete.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
crates/fixtures/inputs/: a_basic.json
crates/insign-core/: Cargo.toml
crates/insign-core/proptest-regressions/: lexer.txt
crates/insign-core/src/: lexer.rs  lib.rs  pipeline.rs
crates/insign-core/src/ast/: eval.rs  expr.rs  geom.rs  ir.rs  meta.rs  metadata.rs  mod.rs  output.rs
crates/insign-core/src/parser/: geom.rs  json_value.rs  meta.rs  mod.rs
crates/insign-core/src/snapshots/: insign__m9_diagnostics__disallowed_operator_intersection.snap  insign__m9_diagnostics__disallowed_operator_subtraction.snap  insign__m9_diagnostics__disallowed_operator_xor.snap  insign__m9_diagnostics__mixed_mode_error.snap  insign__m9_diagnostics__no_current_region_error.snap  insign__m9_diagnostics__unknown_region_error.snap  insign_core__m9_diagnostics__disallowed_operator_intersection.snap  insign_core__m9_diagnostics__disallowed_operator_subtraction.snap  insign_core__m9_diagnostics__disallowed_operator_xor.snap  insign_core__m9_diagnostics__mixed_mode_error.snap  insign_core__m9_diagnostics__no_current_region_error.snap  insign_core__m9_diagnostics__unknown_region_error.snap
crates/insign-core/tests/: cli_integration.rs  feature_boolean_ops.rs  feature_boolean_ops_enabled.rs  golden.rs
crates/insign-core/tests/fixtures/expected/: A_single_anon.json  B_named_multi.json  C_boolean_union.json  D_wildcards_global.json  E_conflicts.json  G_rc_ac_mixing.json  H_anon_no_metadata.json  I_complex_expressions.json
crates/insign-core/tests/fixtures/inputs/: A_single_anon.txt  B_named_multi.txt  E_conflicts.txt  F_multiline_dense.txt  G_rc_ac_mixing.txt  I_complex_expressions.txt  J_edge_coordinates.txt
crates/insign-ffi/: Cargo.toml
crates/insign-ffi/src/: lib.rs
crates/insign-wasm/: Cargo.toml  README.md  example.js
crates/insign-wasm/src/: lib.rs
examples/: README.md  boolean_operations.jsonl  complex_example.jsonl  error_case.jsonl  simple_signs.jsonl
fixtures/expected/: a_basic.json  b_named_multi.json  c_wildcards_global.json  d_union_expr.json  e_error_conflict.json  f_multiline.json
fixtures/inputs/: b_named_multi.json  c_wildcards_global.json  d_union_expr.json  e_error_conflict.json  f_multiline.json
src/: lib.rs  pipeline.rs
src/ast/: eval.rs  geom.rs  meta.rs  output.rs
src/parser/: meta.rs
tests/: cli_integration.rs  feature_boolean_ops.rs  feature_boolean_ops_enabled.rs  golden.rs
tests/fixtures/expected/: F_multiline_dense.json  J_edge_coordinates.json
tests/fixtures/inputs/: C_boolean_union.txt  D_wildcards_global.txt  H_anon_no_metadata.txt
tools/parity/: ffi_runner.py  wasm_runner.js
tools/scripts/: parity-debug.sh  parity-simple.sh  parity.sh
