[package]
name = "insign-ffi"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Insign: FFI bindings for C ABI"
repository = "https://github.com/Schem-at/Insign"

[lib]
name = "insign_ffi"
crate-type = ["cdylib"]

[dependencies]
insign = { version = "0.1.1", path = "../insign-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
