[package]
name = "insign-wasm"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Insign: WASM bindings for web/Node.js"
repository = "https://github.com/Schem-at/Insign"

[lib]
crate-type = ["cdylib"]

[dependencies]
insign = { version = "0.1.1", path = "../insign-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
